test/mutation_analysis/s0006_zigzag_conversion/hafis/o3/mutants/14/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/o3/mutants/14/Solution.java:30: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
